--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
              width: 200px;
              padding: 5px;
              padding-right: 1550px;
-             float: right;
+             display: inline-block;
             }
         </style>
         <style>
@@ -25,10 +25,10 @@
         <h2>Vacancy: Junior Frontend Developer</h2>
         <img src="images/photo.jpg" width="125" height="160">
         <div class="block1"><p>Clint Eastwood</p>
-        <p>GitHub link</p> <link rel="shortcut icon" href="http://htmlbook.ru/favicon.ico">
+        <a href="https://github.com/Shatality/Junior-Frontend-Developer"><p>GitHub link</p> </a>
         <p>Job Experience: No</p></div>
-        <h3>Interview Date</h3>
-        <input type="date"></p>
+        <h3>Interview Date
+        <input type="date"></p></h3>
         <h3>English Level</h3>
         <input type="radio" name="1">Elementary
         <input type="radio" name="1">Pre-Intermediate
@@ -44,15 +44,16 @@
         <p><input type=search placeholder="Enter">
         <input type="button" value="Add"></p>
          
-        <h3>Sociability</h3>
+        <h3>Sociability
         <select>
             <option>Geek</option>
             <option>Noob</option>
             <option>James Bond</option>
         </select>
+        </h3>
 
-        <p><h3>Salary</h3>
-        <input type=search placeholder="Enter"></p>
+        <p><h3>Salary
+        <input type=number placeholder="Enter"></h3></p>
 
         <h3>Fits the criteria</h3>
         <input type="checkbox" name="2">English level
@@ -73,5 +74,4 @@
 
     </body>
     
-
-</html>
+    </html>
