--- a/index.html
+++ b/index.html
@@ -13,13 +13,18 @@
             .block1 { 
              width: 200px;
              padding: 5px;
-             padding-right: 1550px;
              display: inline-block;
             }
         </style>
         <style>
             body { background: url(images/frozen-2.png); }
-          </style>
+        </style>
+        <style>
+            html { overflow-x: hidden; }
+            div { 
+             min-width:  800px;
+            }
+        </style>
     </head>
     <body>
         <h2>Vacancy: Junior Frontend Developer</h2>
